HVAC Backup 2/objects/MSL__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSL</relationshipLabel>
        <relationshipName>MSL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MSL_Number__c</fullName>
        <label>MSL Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MSL</relationshipLabel>
        <relationshipName>MSL</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MSL</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MSL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSL</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>